--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "figma-deckdeckgo-plugin",
-  "version": "1.0.4",
+  "version": "2.0.0",
   "description": "Export Figma frames to DeckDeckGo",
   "main": "dist/plugin.js",
   "scripts": {
@@ -14,6 +14,7 @@
   },
   "homepage": "https://deckdeckgo.com",
   "devDependencies": {
+    "@deckdeckgo/editor": "file:../deckdeckgo/utils/editor",
     "@figma/plugin-typings": "^1.34.1",
     "@types/jest": "^27.0.1",
     "esbuild": "^0.12.28",
@@ -33,6 +34,7 @@
     }
   },
   "dependencies": {
+    "date-fns": "^2.24.0",
     "jszip": "^3.7.1"
   }
 }
