--- a/manifest.json
+++ b/manifest.json
@@ -3,5 +3,6 @@
   "id": "950777256486678678",
   "api": "1.0.0",
   "main": "dist/plugin.js",
-  "ui": "dist/ui.html"
+  "ui": "dist/ui.html",
+  "editorType": ["figma"]
 }
