--- a/package.json
+++ b/package.json
@@ -15,18 +15,19 @@
   "homepage": "https://deckdeckgo.com",
   "devDependencies": {
     "@deckdeckgo/editor": "file:../deckdeckgo/utils/editor",
-    "@figma/plugin-typings": "^1.34.1",
-    "@types/jest": "^27.0.1",
-    "esbuild": "^0.12.28",
-    "html-minifier-terser": "^6.0.2",
-    "husky": "^7.0.2",
-    "jest": "^27.2.0",
-    "prettier": "^2.4.1",
+    "@figma/plugin-typings": "^1.45.0",
+    "@types/jest": "^27.5.0",
+    "esbuild": "^0.14.38",
+    "html-minifier-terser": "^6.1.0",
+    "husky": "^7.0.4",
+    "jest": "^28.0.3",
+    "jest-environment-jsdom": "^28.0.2",
+    "prettier": "^2.6.2",
     "prettier-quick": "0.0.5",
     "rimraf": "^3.0.2",
     "stream": "0.0.2",
-    "ts-jest": "^27.0.5",
-    "typescript": "^4.4.3"
+    "ts-jest": "^28.0.1",
+    "typescript": "^4.6.4"
   },
   "husky": {
     "hooks": {
@@ -34,7 +35,7 @@
     }
   },
   "dependencies": {
-    "date-fns": "^2.24.0",
-    "jszip": "^3.7.1"
+    "date-fns": "^2.28.0",
+    "jszip": "^3.9.1"
   }
 }
